--- a/new_cat.html
+++ b/new_cat.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>슈뢰딩거의 새로운 커피고양이</title>
+    <title>슈뢰딩거의 새로운 빨간 커피고양이</title>
 </head>
 <body>
-    <h1>안녕하세요 저는 슈뢰딩거의 새로운 커피고양이입니다.</h1>    
+    <h1>안녕하세요 저는 슈뢰딩거의 새로운 빨간 커피고양이입니다.</h1>    
 </body>
 </html>
